test/compile_errors/stage1/test/repeated_invalid_field_access_to_generic_function_returning_type_crashes_compiler_2655.zig
pub fn A() type {
    return Q;
}
test "1" {
    _ = A().a;
    _ = A().a;
}

// repeated invalid field access to generic function returning type crashes compiler. #2655
//
// tmp.zig:2:12: error: use of undeclared identifier 'Q'
